--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -197,48 +197,48 @@
 
         <div class="col">
           <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            -->
+            <a href="images/vins/IMG_04.jpg" target="_blank"><img src="images/vins/IMG_04M.jpg" alt="Мама" height="225"></a>
+            </div>
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">С новой мамой.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <a href="images/vins/IMG_04.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
                 </div>
-                <small class="text-muted">9 mins</small>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
               </div>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-muted">9 mins</small>
-              </div>
+            -->
+            <a href="images/vins/IMG_05.jpg" target="_blank"><img src="images/vins/IMG_05M.jpg" alt="Канат" height="225"></a>
             </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Винс тренируется на канате.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <a href="images/vins/IMG_05.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
                 </div>
-                <small class="text-muted">9 mins</small>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
               </div>
             </div>
           </div>
@@ -246,52 +246,104 @@
 
         <div class="col">
           <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            -->
+            <a href="images/vins/IMG_06.jpg" target="_blank"><img src="images/vins/IMG_06M.jpg" alt="Лежанка" height="225"></a>
+            </div>
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Когда-то лежанка казалась большой.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <a href="images/vins/IMG_06.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
                 </div>
-                <small class="text-muted">9 mins</small>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
               </div>
             </div>
           </div>
         </div>
+
         <div class="col">
           <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            -->
+            <a href="images/vins/IMG_07.jpg" target="_blank"><img src="images/vins/IMG_07M.jpg" alt="Еж" height="225"></a>
+            </div>
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">С ёжиком из IKEA.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <a href="images/vins/IMG_07.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
                 </div>
-                <small class="text-muted">9 mins</small>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
               </div>
             </div>
           </div>
-        </div>
+        </div>        
+
         <div class="col">
           <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            -->
+            <a href="images/vins/IMG_08.jpg" target="_blank"><img src="images/vins/IMG_08M.jpg" alt="Устал" height="225"></a>
+            </div>
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Zzzz.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <a href="images/vins/IMG_08.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
                 </div>
-                <small class="text-muted">9 mins</small>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
               </div>
             </div>
           </div>
         </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            -->
+            <a href="images/vins/IMG_09.jpg" target="_blank"><img src="images/vins/IMG_09M.jpg" alt="Лопатка" height="225"></a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Еще одна игрушка.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="images/vins/IMG_09.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
+                </div>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
@@ -301,7 +353,7 @@
 <footer class="text-muted py-5">
   <div class="container">
     <p class="float-end mb-1">
-      <a href="#">Вернуться на верх страницы</a>
+      <a href="#">Вернуться к началу страницы</a>
     </p>
     <p class="mb-1">Альбом подготовлен с использованием фреймворка Bootstrap</p>
     <p class="mb-0"> </p>
