--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -353,7 +353,7 @@
 <footer class="text-muted py-5">
   <div class="container">
     <p class="float-end mb-1">
-      <a href="#">Вернуться к началу страницы</a>
+      <a href="#">Вернуться к началу</a>
     </p>
     <p class="mb-1">Альбом подготовлен с использованием фреймворка Bootstrap</p>
     <p class="mb-0"> </p>
