--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -81,7 +81,7 @@
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">О собакене</h4>
-          <p class="text-muted">Vinsent One Fon Grizzli StyleAdd - родился 20 сентября 2020 года и через пару месяцев был нашел свою человеческую семью. На этой странице показаны первые два года жизни собаки.</p>
+          <p class="text-muted">Vinsent One Fon Grizzli StyleAdd - родился 20 сентября 2020 года и через пару месяцев обрел свою человеческую семью. На этой странице показаны первые два года жизни собаки.</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Контакты</h4>
