--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -131,7 +131,7 @@
             </div>
 
             <div class="card-body">
-              <p class="card-text">В возрасте примерно трех недель пес был похож скорее на хомячка или морскую свинку чем на собаку.</p>
+              <p class="card-text">В возрасте примерно трех недель пес был похож скорее на хомячка или морскую свинку чем на собаку</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_01.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
@@ -155,7 +155,7 @@
             <a href="images/vins/IMG_02.jpg" target="_blank"><img src="images/vins/IMG_02M.jpg" alt="Семья" height="225"></a>
             </div>
             <div class="card-body">
-              <p class="card-text">Родственнички - суровая мама Лилу и ее первый помет.</p>
+              <p class="card-text">Родственнички - суровая мама Лилу и ее первый помет</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_02.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
@@ -179,7 +179,7 @@
             <a href="images/vins/IMG_03.jpg" target="_blank"><img src="images/vins/IMG_03M.jpg" alt="В новом доме" height="225"></a>
             </div>
             <div class="card-body">
-              <p class="card-text">В новом доме.</p>
+              <p class="card-text">В новом доме</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_03.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
@@ -204,7 +204,7 @@
             <a href="images/vins/IMG_04.jpg" target="_blank"><img src="images/vins/IMG_04M.jpg" alt="Мама" height="225"></a>
             </div>
             <div class="card-body">
-              <p class="card-text">С новой мамой.</p>
+              <p class="card-text">С новой мамой</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_04.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
@@ -228,7 +228,7 @@
             <a href="images/vins/IMG_05.jpg" target="_blank"><img src="images/vins/IMG_05M.jpg" alt="Канат" height="225"></a>
             </div>
             <div class="card-body">
-              <p class="card-text">Винс тренируется на канате.</p>
+              <p class="card-text">Винс тренируется на канате</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_05.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
@@ -253,7 +253,7 @@
             <a href="images/vins/IMG_06.jpg" target="_blank"><img src="images/vins/IMG_06M.jpg" alt="Лежанка" height="225"></a>
             </div>
             <div class="card-body">
-              <p class="card-text">Когда-то лежанка казалась большой.</p>
+              <p class="card-text">Когда-то лежанка казалась большой</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_06.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
@@ -278,7 +278,7 @@
             <a href="images/vins/IMG_07.jpg" target="_blank"><img src="images/vins/IMG_07M.jpg" alt="Еж" height="225"></a>
             </div>
             <div class="card-body">
-              <p class="card-text">С ёжиком из IKEA.</p>
+              <p class="card-text">С ёжиком из IKEA</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_07.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
@@ -292,7 +292,7 @@
               </div>
             </div>
           </div>
-        </div>        
+        </div>
 
         <div class="col">
           <div class="card shadow-sm">
@@ -303,7 +303,7 @@
             <a href="images/vins/IMG_08.jpg" target="_blank"><img src="images/vins/IMG_08M.jpg" alt="Устал" height="225"></a>
             </div>
             <div class="card-body">
-              <p class="card-text">Zzzz.</p>
+              <p class="card-text">Zzzz</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_08.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
@@ -328,7 +328,7 @@
             <a href="images/vins/IMG_09.jpg" target="_blank"><img src="images/vins/IMG_09M.jpg" alt="Лопатка" height="225"></a>
             </div>
             <div class="card-body">
-              <p class="card-text">Еще одна игрушка.</p>
+              <p class="card-text">Еще одна игрушка</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_09.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
