--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -131,7 +131,7 @@
             </div>
 
             <div class="card-body">
-              <p class="card-text">В возрасте примерно трех недель пес был похож скорее на хомячка или морскую свинку чем на собаку</p>
+              <p class="card-text">В возрасте трех недель пес был похож скорее на морскую свинку чем на собаку</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_01.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
@@ -332,6 +332,80 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_09.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
+                </div>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            -->
+            <a href="images/vins/IMG_10.jpg" target="_blank"><img src="images/vins/IMG_10M.jpg" alt="Зима" height="225"></a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Первая зима</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="images/vins/IMG_10.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
+                </div>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            -->
+            <a href="images/vins/IMG_11.jpg" target="_blank"><img src="images/vins/IMG_11M.jpg" alt="Выставка" height="225"></a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Выставка - такое себе мероприятие</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="images/vins/IMG_11.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
+                </div>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            -->
+            <a href="images/vins/IMG_12.jpg" target="_blank"><img src="images/vins/IMG_12M.jpg" alt="Сестры" height="225"></a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">В семейном кругу</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="images/vins/IMG_12.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
                   <!-- закоментили кнопку редактирования
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                   -->
