--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -131,7 +131,7 @@
             </div>
 
             <div class="card-body">
-              <p class="card-text">В возрасте трех недель пес был похож скорее на морскую свинку чем на собаку</p>
+              <p class="card-text">Морская свинка или собака?</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_01.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
@@ -155,7 +155,7 @@
             <a href="images/vins/IMG_02.jpg" target="_blank"><img src="images/vins/IMG_02M.jpg" alt="Семья" height="225"></a>
             </div>
             <div class="card-body">
-              <p class="card-text">Родственнички - суровая мама Лилу и ее первый помет</p>
+              <p class="card-text">Суровая мама Лилу и ее первый помет</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_02.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
