--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -417,11 +417,85 @@
             </div>
           </div>
         </div>
+        
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            -->
+            <a href="images/vins/IMG_13.jpg" target="_blank"><img src="images/vins/IMG_13M.jpg" alt="Дети" height="225"></a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Басенджи любят детей</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="images/vins/IMG_13.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
+                </div>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            -->
+            <a href="images/vins/IMG_14.jpg" target="_blank"><img src="images/vins/IMG_14M.jpg" alt="Картина" height="225"></a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Дети любят собаку</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="images/vins/IMG_14.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
+                </div>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            -->
+            <a href="images/vins/IMG_15.jpg" target="_blank"><img src="images/vins/IMG_15M.jpg" alt="Рязань" height="225"></a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Крокодилов не обнаружено</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="images/vins/IMG_15.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
+                </div>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
+              </div>
+            </div>
+          </div>
+        </div>
 
       </div>
     </div>
   </div>
-
 </main>
 
 <footer class="text-muted py-5">
