--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -417,7 +417,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
@@ -493,6 +493,83 @@
           </div>
         </div>
 
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            -->
+            <a href="images/vins/IMG_16.jpg" target="_blank"><img src="images/vins/IMG_16M.jpg" alt="Поля" height="225"></a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Рязаские просторы</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="images/vins/IMG_16.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
+                </div>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            -->
+            <a href="images/vins/IMG_17.jpg" target="_blank"><img src="images/vins/IMG_17M.jpg" alt="Казань" height="225"></a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Великолепная Казань</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="images/vins/IMG_17.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
+                </div>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            -->
+            <a href="images/vins/IMG_18.jpg" target="_blank"><img src="images/vins/IMG_18M.jpg" alt="ЖиГоры" height="225"></a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">В Жигулевских горах</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="images/vins/IMG_18.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
+                </div>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
+              </div>
+            </div>
+          </div>
+        </div>
+        
       </div>
     </div>
   </div>
@@ -508,7 +585,7 @@
   </div>
 </footer>
 
-    <script src="vendor/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/js/bootstrap.bundle.min.js"></script>
 
   </body>
 </html>
