--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -569,7 +569,82 @@
             </div>
           </div>
         </div>
-        
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            -->
+            <a href="images/vins/IMG_19.jpg" target="_blank"><img src="images/vins/IMG_19M.jpg" alt="Болото" height="225"></a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Истринские болота</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="images/vins/IMG_19.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
+                </div>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            -->
+            <a href="images/vins/IMG_20.jpg" target="_blank"><img src="images/vins/IMG_20M.jpg" alt="Типи" height="225"></a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Самая длинная басенджи</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="images/vins/IMG_20.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
+                </div>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="fotoicon">
+            <!-- закоментил шаблонный тег svg и вместо него вставил тег img
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            -->
+            <a href="images/vins/IMG_21.jpg" target="_blank"><img src="images/vins/IMG_21M.jpg" alt="Лес" height="225"></a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Нахабинский лес</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="images/vins/IMG_21.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                  <!-- закоментили кнопку редактирования
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  -->
+                </div>
+                  <!-- закоментили тег small
+                  <small class="text-muted">9 mins</small>
+                  -->
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
@@ -585,7 +660,7 @@
   </div>
 </footer>
 
-  <script src="vendor/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/js/bootstrap.bundle.min.js"></script>
 
   </body>
 </html>
