--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -852,7 +852,7 @@
             <a href="images/vins/IMG_30.jpg" target="_blank"><img src="images/vins/IMG_30M.jpg" alt="Рожица" height="225"></a>
             </div>
             <div class="card-body">
-              <p class="card-text">Еще Винс умеет корчить рожи</p>
+              <p class="card-text">Винс умеет корчить рожи</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_30.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
