--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -66,7 +66,7 @@
       .fotoicon {
         width: 100%;
         padding: 1px;
-        margin: 1px;
+        margin-top: 3px;
         text-align: center;
       }
 
