--- a/index.html
+++ b/index.html
@@ -1,20 +1,103 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>HTML, CSS, JS, React</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <title>Pet-project: HTML, CSS, JS, React</title>
+    <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="images/favicon1.png" type="image/png">
-    <link rel="stylesheet" href="style.css">
+    
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+
+      .b-example-divider {
+        height: 3rem;
+        background-color: rgba(0, 0, 0, .1);
+        border: solid rgba(0, 0, 0, .15);
+        border-width: 1px 0;
+        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+      }
+
+      .b-example-vr {
+        flex-shrink: 0;
+        width: 1.5rem;
+        height: 100vh;
+      }
+
+      .bi {
+        vertical-align: -.125em;
+        fill: currentColor;
+      }
+
+      .nav-scroller {
+        position: relative;
+        z-index: 2;
+        height: 2.75rem;
+        overflow-y: hidden;
+      }
+
+      .nav-scroller .nav {
+        display: flex;
+        flex-wrap: nowrap;
+        padding-bottom: 1rem;
+        margin-top: -1px;
+        overflow-x: auto;
+        text-align: center;
+        white-space: nowrap;
+        -webkit-overflow-scrolling: touch;
+      }
+
+      .index-page {
+        background-color: #1e2f49;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+
   </head>
   <body class="index-page">
-    <table>
-      <tr>
-        <th class="index-page"><a href="vinsent-page.html" target="_blank"><h2>Страничка Винса</h2></a></th>
-        <th class="index-page"><a href="itc.html" target="_blank"><h2>CSS</h2></a></th>
-        <th class="index-page"><a href="js.html" target="_blank"><h2>JS</h2></a></th>
-        <th class="index-page"><a href="feedback.html" target="_self"><h2>Обратная связь</h2></a></th>
-      </tr>
-    </table>
+
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Hello world!</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link" href="vinsent-page.html" target="_blank">Страничка Винса</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="test-css-page.html" target="_blank">CSS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="test-js-page.html" target="_blank">JS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="test-feedback-page.html" target="_self">Обратная связь</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
     <img src="images/totoro.GIF" alt="Изображение хранителя леса" width="100%">
+
+    <script src="vendor/js/bootstrap.bundle.min.js"></script>
+
   </body>
-</html>
+</html>    
