--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </head>
   <body class="index-page">
 
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md fixed-top" style="background-color: #1e2f49;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Hello world!</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -82,13 +82,13 @@
               <a class="nav-link" href="vinsent-page.html" target="_blank">Страничка Винса</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="test-css-page.html" target="_blank">CSS</a>
+              <a class="nav-link" href="#" target="_blank">CSS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="test-js-page.html" target="_blank">JS</a>
+              <a class="nav-link" href="#" target="_blank">JS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="test-feedback-page.html" target="_self">Обратная связь</a>
+              <a class="nav-link" href="#" target="_self">Обратная связь</a>
             </li>
           </ul>
         </div>
