--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </head>
   <body class="index-page">
 
-    <nav class="navbar navbar-expand-md fixed-top" style="background-color: #1e2f49;">
+    <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Hello world!</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
