--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
   </head>
   <body class="index-page">
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
+    <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" style="background-color: #1e2f49;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Hello world!</a>
+        <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
