--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </head>
   <body class="index-page">
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" style="background-color: #1e2f49;">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #1e2f49;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -82,10 +82,10 @@
               <a class="nav-link" href="vinsent-page.html" target="_blank">Страничка Винса</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" target="_blank">CSS</a>
+              <a class="nav-link" href="#" target="_self">CSS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" target="_blank">JS</a>
+              <a class="nav-link" href="#" target="_self">JS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" target="_self">Обратная связь</a>
