--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
   </head>
   <body class="index-page">
 
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #1e2f49;">
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top" style="background-color: #1e2f49;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"></a>
+          <!-- закоментил ссылку на navbar-brand 
+          <a class="navbar-brand" href="#"></a>
+          -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
