--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </head>
   <body class="index-page">
 
-    <nav class="navbar navbar-expand-sm navbar-dark fixed-top" style="background-color: #1e2f49;">
+    <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1e2f49;">
       <div class="container-fluid">
           <!-- закоментил ссылку на navbar-brand 
           <a class="navbar-brand" href="#"></a>
