--- a/index.html
+++ b/index.html
@@ -84,20 +84,20 @@
               <a class="nav-link" href="vinsent-page.html" target="_blank">Страничка Винса</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" target="_self">CSS</a>
+              <a class="nav-link" href="#" target="_self">CSS (в разработке)</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" target="_self">JS</a>
+              <a class="nav-link" href="test-js-page.html" target="_blank">JS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" target="_self">Обратная связь</a>
+              <a class="nav-link" href="#" target="_self">Обратная связь (в разработке)</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     
-    <img src="images/totoro.GIF" alt="Изображение хранителя леса" width="100%">
+    <img src="images/totoro.GIF" alt="" width="100%">
 
     <script src="vendor/js/bootstrap.bundle.min.js"></script>
 
