--- a/test-js-page.html
+++ b/test-js-page.html
@@ -5,7 +5,7 @@
     <title>JS</title>
     <link rel="stylesheet" href="css/style-js-page.css">
   </head>
-  <body class="index-page">
+  <body>
     <header class="header">
       <h1 id="ages">Привет<br>мир!</h1>
     </header>
