--- a/index.html
+++ b/index.html
@@ -51,17 +51,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item">
-              <a class="nav-link line" href="vinsent-page.html" target="_blank">Страничка Винса</a>
+            <li class="nav-item ">
+                <li class="nav-item ">
+              <a class="nav-link " href="vinsent-page.html" target="_blank">Страничка Винса</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link line" href="#" target="_self">CSS (в разработке)</a>
+            <li class="nav-item line">
+              <a class="nav-link" href="#" target="_self">CSS (в разработке)</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link line" href="test-js-page.html" target="_blank">JS</a>
+            <li class="nav-item line">
+              <a class="nav-link" href="test-js-page.html" target="_blank">JS</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link line" href="#" target="_self">Обратная связь (в разработке)</a>
+            <li class="nav-item line">
+              <a class="nav-link" href="#" target="_self">Обратная связь (в разработке)</a>
             </li>
           </ul>
         </div>
