--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item ">
-                <li class="nav-item ">
-              <a class="nav-link " href="vinsent-page.html" target="_blank">Страничка Винса</a>
+                <li class="nav-item line">
+              <a class="nav-link" href="vinsent-page.html" target="_blank">Страничка Винса</a>
             </li>
             <li class="nav-item line">
               <a class="nav-link" href="#" target="_self">CSS (в разработке)</a>
