--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
               <a class="nav-link" href="#" target="_self">CSS (в разработке)</a>
             </li>
             <li class="nav-item">
-              <a class="py-2 d-none d-md-inline-block" href="test-js-page.html" target="_blank">JS</a>
+              <a class="nav-link" href="test-js-page.html" target="_blank">JS</a>
             </li>
             <li class="nav-item">
-              <a class="py-2 d-none d-md-inline-block" href="#" target="_self">Обратная связь (в разработке)</a>
+              <a class="nav-link" href="#" target="_self">Обратная связь (в разработке)</a>
             </li>
           </ul>
         </div>
