--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="images/favicon1.png" type="image/png">
   </head>
-  <body class="index-page" style="background-color: #1e2f49; margin: 0; padding: 0;">
+  <body style="background-color: #1e2f49; margin: 0; padding: 0;">
 
     <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1e2f49;">
       <div class="container-fluid">
